2012-12-05  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.2.10

	* src/RInside.cpp: Set R_CStackLimit to -1 to block stack checking,
	place assignment after initialization of embedded R instance (on all
	platforms but Windows which does not have R_CStackLimit)
	* inst/include/RInsideCommon.h: Updated to ensure R_CStackLimit is
	defined, added a few more #include statements here

	* inst/examples/threads/boostEx.cpp: New example directory for simple
	multi-threaded use demo building on a simple Boost mutex example
	* cleanup: Also clean new example directory threads/
	* doxyfile: Added new example directory threads/

	* inst/examples/qt/qtdensity.pro: Corrected link order statement
	permitting use of example on Windows as well as Linux / OS X

	* inst/examples/standard/rinside_sample9.cpp: Disabled as passing
	external C/C++ function through simplified interface currently borked
	* inst/examples/standard/rinside_module_sample0.cpp: Idem
	
2012-11-08  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/standard/rinside_sample11.cpp: added include for
	unistd so that unlink() is declared as needed for g++ (>= 4.7)

2012-11-04  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.2.9

2012-10-28  Peter Aberline  <peter.aberline@gmail.com>

	* inst/examples/standard/cmake/CMakeLists.txt: R_ARCH autodetection
	* inst/examples/armadillo/cmake/CMakeLists.txt: Dito
	* inst/examples/eigen/cmake/CMakeLists.txt: Dito

	* inst/examples/armadillo/cmake/WIN.readme.txt: Added instructions
	for running windows binaries.
	* inst/examples/eigen/cmake/WIN.readme.txt: Dito

2012-10-15  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/RInside.h: Added two new boolean arguments to
	constructor to set verbose and/or interactive mode; verbose mode can
	also be changed via a setter function.
	* src/RInside.cpp: Corresponding implementation

	* inst/examples/standard/rinside_sample13.cpp: New example
	illustrating the new more fault-tolerant modes
